Show all task members component max height and z-index fixed

--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -11,7 +11,7 @@
   border: 1px solid #363338;
   font-size: 1.3rem;
   font-weight: bold;
-  z-index: 10;
+  z-index: 20;
 }
 
 .small {
